изменил докерфайл, изменил настройки подключения БД на удаленный сервер

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.show-sql=true
 
 server.port=8080
 
-db.url=jdbc:mysql://localhost/sbermini?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
-db.password=qwerty123
-db.username=root
+db.url=jdbc:mysql://31.31.196.89:3306/u0552319_sbermini?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
+db.password=G4h5J6
+db.username=u0552_sber
 
 spring.mail.host=smtp.yandex.ru
 spring.mail.username=ex4mple.example@yandex.ru
